CON-515 : store last cloned dir to a home dir